--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.17.2",
     "client-sessions": "^0.8.0",
     "express": "^4.15.4",
+    "googleapis": "^27.0.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "pg": "^7.4.3",
