--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.17.2",
     "client-sessions": "^0.8.0",
+    "css-loader": "^0.28.11",
     "express": "^4.15.4",
     "googleapis": "^27.0.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
+    "rc-time-picker": "^3.3.1",
     "react": "^15.6.1",
     "react-day-picker": "^7.1.9",
     "react-dom": "^15.6.1",
